--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,7 +75,11 @@
     <string name="title_wallet_history">Wallet History</string>
     <string name="add_wallet">Add Wallet</string>
     <string name="buy_bitcoin_cash">Buy Bitcoin Cash</string>
-    <string name="support_us">Support NextCash</string>
+    <string name="support_nextcash">Support NextCash</string>
+    <string name="support_nextcash_description">
+        Send Bitcoin Cash to this address to support NextCash development.
+    </string>
+    <string name="give_feedback">Give Feedback</string>
     <string name="create_new_key">Create New Wallet</string>
     <string name="recover_wallet">Recover Wallet</string>
     <string name="update_name">Update Name</string>
