Clean up send payment layout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -309,7 +309,7 @@
     <string-array name="amount_units">
         <item>USD</item>
         <item>bits</item>
-        <item>bitcoins</item>
+        <item>BCH</item>
     </string-array>
     <string-array name="fee_rates">
         <item>Priority</item>
