--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,6 +115,9 @@
     <string name="failed_change_address">Change Address Not Found</string>
     <string name="failed_signing">Failed to Sign Transaction</string>
     <string name="failed_dust">Failed. Amount too small</string>
+    <string name="failed_camera_create">Failed to initialize camera</string>
+    <string name="failed_camera_access">Failed to access camera</string>
+    <string name="failed_camera_general">Failed to use camera</string>
     <string name="send_max">Send Max</string>
     <string name="invalid_payment_code">Invalid Payment Code</string>
     <string name="locked">View Only</string>
