--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -283,6 +283,7 @@
     <string name="copied_to_clipboard">Copied to clipboard</string>
     <string name="okay">Okay</string>
     <string name="continue_string">Continue</string>
+    <string name="use_clipboard">Use Clipboard</string>
     <string name="check_seed">Check Seed</string>
     <string name="skip_check_seed">Skip (at your own risk)</string>
     <string name="select_seed_words">Select Seed Words in Order</string>
