Change authorize screen to a custom PIN entry.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -261,6 +261,9 @@
     </string>
     <string name="passcode">Pass Code</string>
     <string name="authorize">Authorize</string>
+    <string name="backspace">Back Space</string>
+    <string name="min_pin_length">Minimum or 4 digits required in PIN</string>
+    <string name="max_pin_length">Maximum of 8 digits in PIN</string>
     <string name="create_wallet">Create Wallet</string>
     <string name="verify_seed">Verify Seed</string>
     <string name="wallet_seed">Wallet Seed</string>
@@ -664,5 +667,15 @@
         See historical transactions for a wallet.
     </string>
 
+    <string name="zero">0</string>
+    <string name="one">1</string>
+    <string name="two">2</string>
+    <string name="three">3</string>
+    <string name="four">4</string>
+    <string name="five">5</string>
+    <string name="six">6</string>
+    <string name="seven">7</string>
+    <string name="eight">8</string>
+    <string name="nine">9</string>
 
 </resources>
