--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,13 +174,23 @@
     <string name="cost_must_be_number">Cost basis must be a valid number</string>
     <string name="address_label">Label</string>
     <string name="address_label_hint">Enter Address Label</string>
-    <string name="address_label_description">
-        Automatically apply a comment to any transactions received to this address.
-    </string>
     <string name="address_label_updated">Address label updated</string>
     <string name="add_label">Add Label</string>
     <string name="view_labels">View Labels</string>
     <string name="labeled_addresses">Labeled Addresses</string>
+    <string name="address_label_description">
+        Automatically label any transaction that pays to this address.
+    </string>
+    <string name="address_label_description_plural">
+        Automatically label any transactions that pay to the specified addresses.
+    </string>
+    <string name="address_labels">Address Labels</string>
+    <string name="address_labels_instruction">
+        Address labels can be accessed after touching the receive button.
+        They are used to automatically label incoming transactions for specific addresses.
+        For instance, you can give your friend a specific address, and label it with their name.
+        Then when they send you money, you will know it came from them.
+    </string>
     <string name="any_amount">Any amount</string>
     <string name="add_manual_address_label">Manually Add</string>
     <string name="enter_address_hint">Enter Address</string>
@@ -193,6 +203,13 @@
     <string name="address_book_description">
         When using saved addresses please ensure the recipient still has access to the address.
         If sending a large amount it is best to request a new payment address.
+    </string>
+    <string name="address_book_instruction">
+        The address book is accessed after touching the send button.
+        It is used to save addresses to send payments to repeatedly, or just later.
+        For instance, if your friend gives you an address, you can save it with their name.
+        Then if you want to send them a payment later, and you know they still use the same wallet,
+          you can just send a payment to that address.
     </string>
     <string name="swipe_to_delete">Swipe to delete</string>
     <string name="undo_delete">Undo Delete</string>
